# tablatures-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
api/: app.py  database.py  models.py  utils.py
api/controllers/: autocomplete_controller.py  catalog_controller.py  download_controller.py  live_search_controller.py  metadata_controller.py  search_controller.py
api/services/: artist_parser.py  autocomplete_service.py  catalog_service.py  download_service.py  live_search_service.py  metadata_service.py  search_service.py
api/services/sources/: base_source.py  local_source.py  songsterr_source.py  ultimate_guitar_source.py
database/: database.example.json
