[project]
name = "flask-tablatures-api"
version = "0.1.0"
description = "Flask API for guitar tablatures"
authors = []
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.2,<4.0.0",
    "flask-cors>=6.0.1,<7.0.0",
    "flask-compress>=1.17,<2.0.0",
    "flask-pydantic>=0.13.2,<0.14.0",
    "requests>=2.32.5,<3.0.0",
    "typing-extensions>=4.15.0,<5.0.0",
    "pydantic>=2.11.9,<3.0.0"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9.0.0",
    "black>=25.9.0,<26.0.0",
    "flake8>=7.3.0,<8.0.0"
]
